--- a/Diffraction/CH2_11-HOLZ_Lines.ipynb
+++ b/Diffraction/CH2_11-HOLZ_Lines.ipynb
@@ -21,12 +21,30 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2021\n",
     "\n",
-    "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
-    "Materials Science & Engineering<br>\n",
-    "The University of Tennessee, Knoxville\n",
+    "**Spring 2024**\n",
+    "<table style=\"margin-right:auto;margin-left:0px\">\n",
+    "  <tr>\n",
+    "    <td>Gerd Duscher </td>\n",
+    "    <td>Khalid Hattar</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Microscopy Facilities</td> \n",
+    "    <td> Tennessee Ion Beam Materials Laboratory </td>\n",
+    "  </tr>\n",
+    "  \n",
+    "  <tr>\n",
+    "    <td>Materials Science & Engineering</td>\n",
+    "    <td> Nuclear Engineering</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Institute of Advanced Materials & Manufacturing</td>\n",
+    "    <td> </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td colspan=\"2\"><center> The University of Tennessee, Knoxville</center> </td>\n",
+    "  </tr>\n",
+    "</table>\n",
     "\n",
     "Background and methods to analysis and quantification of data acquired with transmission electron microscopes\n",
     "\n"
@@ -56,20 +74,21 @@
    ],
    "source": [
     "import sys\n",
-    "from pkg_resources import get_distribution, DistributionNotFound\n",
-    "\n",
+    "import importlib.metadata\n",
     "def test_package(package_name):\n",
     "    \"\"\"Test if package exists and returns version or -1\"\"\"\n",
     "    try:\n",
-    "        version = get_distribution(package_name).version\n",
-    "    except (DistributionNotFound, ImportError) as err:\n",
+    "        version = importlib.metadata.version(package_name)\n",
+    "    except importlib.metadata.PackageNotFoundError:\n",
     "        version = '-1'\n",
     "    return version\n",
     "\n",
-    "if test_package('pyTEMlib') < '0.2022.2.5':\n",
+    "if test_package('pyTEMlib') < '0.2024.1.0':\n",
     "    print('installing pyTEMlib')\n",
-    "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
+    "    !{sys.executable} -m pip install git+https://github.com/pycroscopy/pyTEMlib.git@main -q --upgrade\n",
     "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    !{sys.executable} -m pip install numpy==1.24.4\n",
     "print('done')"
    ]
   },
@@ -94,7 +113,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -113,10 +131,14 @@
     }
    ],
    "source": [
-    "# import matplotlib and numpy\n",
-    "#                       use \"inline\" instead of \"notebook\" for non-interactive plots\n",
-    "%pylab --no-import-all notebook\n",
-    "\n",
+    "%matplotlib  widget\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import sys\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    from google.colab import output\n",
+    "    output.enable_custom_widget_manager()\n",
+    "    \n",
     "# additional package \n",
     "import  itertools \n",
     "import scipy.constants as const\n",
@@ -132,7 +154,7 @@
     "import pyTEMlib.file_tools as ft\n",
     "import pyTEMlib\n",
     "\n",
-    "__notebook_version__ = '2022.02.21'\n",
+    "__notebook_version__ = '2024.02.21'\n",
     "\n",
     "print('pyTEM version: ', pyTEMlib.__version__)\n",
     "print('notebook version: ', __notebook_version__)"
@@ -153,9 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1206,6 +1226,9 @@
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1218,9 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tags = {}\n",
@@ -1241,6 +1262,9 @@
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1252,9 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ks.kinematic_scattering(atoms, False)"
@@ -1270,9 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5615,7 +5635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": "11",
@@ -5637,5 +5657,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
