--- a/Introduction/CH1_04-Open_File.ipynb
+++ b/Introduction/CH1_04-Open_File.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -363,7 +363,7 @@
        " with metadata: ['experiment', 'filename']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,13 @@
       "title:  p1-3-hr3\n",
       "data type:  DataType.IMAGE\n",
       "Channel_000\n",
-      "dict_keys(['ImageData', 'ImageTags', 'Name', 'UniqueID', 'DM', 'original_filename', 'ApplicationBounds', 'DocumentObjectList', 'DocumentTags', 'HasWindowPosition', 'Image Behavior', 'ImageSourceList', 'InImageMode', 'MinVersionList', 'NextDocumentObjectID', 'Page Behavior', 'SentinelList', 'Thumbnails', 'WindowPosition', 'original_title'])\n"
+      "dict_keys(['ImageData', 'ImageTags', 'Name', 'UniqueID', 'DM', 'original_filename', 'ApplicationBounds', 'DocumentObjectList', 'DocumentTags', 'HasWindowPosition', 'Image Behavior', 'ImageSourceList', 'InImageMode', 'MinVersionList', 'NextDocumentObjectID', 'Page Behavior', 'SentinelList', 'Thumbnails', 'WindowPosition', 'original_title'])\n",
+      "Copied_of_Channel_000\n",
+      "dict_keys([])\n",
+      "Log_000\n",
+      "dict_keys([])\n",
+      "Log_001\n",
+      "dict_keys([])\n"
      ]
     },
     {
@@ -427,7 +433,7 @@
        " 'filename': '../example_data/p1-3-hr3.dm3'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
