--- a/Diffraction/CH2_01-Electron.ipynb
+++ b/Diffraction/CH2_01-Electron.ipynb
@@ -23,12 +23,29 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher and Khalid Hattar, Spring 2024\n",
-    "\n",
-    "Microscopy Facilities and Ion Beam Facility<br>\n",
-    "Institute of Advanced Materials & Manufacturing<br>\n",
-    "Materials Science & Engineering and Nuclear Engineering<br>\n",
-    "The University of Tennessee, Knoxville\n",
+    "**Spring 2024**\n",
+    "<table style=\"margin-right:auto;margin-left:0px\">\n",
+    "  <tr>\n",
+    "    <td>Gerd Duscher </td>\n",
+    "    <td>Khalid Hattar</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Microscopy Facilities</td> \n",
+    "    <td> Tennessee Ion Beam Materials Laboratory </td>\n",
+    "  </tr>\n",
+    "  \n",
+    "  <tr>\n",
+    "    <td>Materials Science & Engineering</td>\n",
+    "    <td> Nuclear Engineering</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Institute of Advanced Materials & Manufacturing</td>\n",
+    "    <td> </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td colspan=\"2\"><center> The University of Tennessee, Knoxville</center> </td>\n",
+    "  </tr>\n",
+    "</table>\n",
     "\n",
     "Background and methods to analysis and quantification of data acquired with transmission electron microscopes.\n",
     "\n"
@@ -740,7 +757,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
