--- a/Introduction/CH1_06-Overview.ipynb
+++ b/Introduction/CH1_06-Overview.ipynb
@@ -445,7 +445,7 @@
    "source": [
     "## Navigation\n",
     "- <font size = \"3\">  **Back  [Course Organization](CH1_05-Course_Organization.ipynb)** </font>\n",
-    "- <font size = \"3\">  **Next: [Electron_Optics](CH1_07-Electron-Optics.ipynb)** </font>\n",
+    "- <font size = \"3\">  **Next: [Electron_Optics](CH1_07-Electron_Optics.ipynb)** </font>\n",
     "- <font size = \"3\">  **Chapter 1: [Introduction](CH1_00-Introduction.ipynb)** </font>\n",
     "- <font size = \"3\">  **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)** </font>"
    ]
