--- a/Introduction/CH1_00-Introduction.ipynb
+++ b/Introduction/CH1_00-Introduction.ipynb
@@ -74,7 +74,7 @@
     "*Course Material*\n",
     "* [Course Organization](CH1_05-Course_Organization.ipynb)\n",
     "* [Overview](CH1_06-Overview.ipynb)\n",
-    "* [Electron-Optics](CH1_07-Electron-Optics.ipynb)\n",
+    "* [Electron-Optics](CH1_07-Electron_Optics.ipynb)\n",
     "\n",
     "  "
    ]
