--- a/Homework/Homework01.ipynb
+++ b/Homework/Homework01.ipynb
@@ -44,7 +44,7 @@
     "- numpy: numerical library\n",
     "- matplotlib: graphic library\n",
     "\n",
-    "All of those packages are provided by annaconda."
+    "Both of these packages are provided by annaconda and are already installed in Google Colab."
    ]
   },
   {
