--- a/Homework/Homework03_KinematicDiffraction.ipynb
+++ b/Homework/Homework03_KinematicDiffraction.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "\n",
     "# pyTEMlib setup ------------------\n",
-    "if test_package('pyTEMlib') < '0.2024.02.1':\n",
+    "if test_package('pyTEMlib') < '0.2024.02.2':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade SciFiReaders -q\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
@@ -107,7 +107,7 @@
     "\n",
     "Beside the basic numerical (numpy) and plotting (pylab of matplotlib) libraries,\n",
     "\n",
-    "and some libraries from pyTEMlib\n",
+    "and some libraries from the book\n",
     "* kinematic scattering library.\n",
     "* file_tools library"
    ]
