--- a/Imaging/CH3_01-Resolution.ipynb
+++ b/Imaging/CH3_01-Resolution.ipynb
@@ -14,20 +14,42 @@
     "# Resolution Limit\n",
     "\n",
     "\n",
-    "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Diffraction/CH3_01-Resolution.ipynb)\n",
+    "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Imaging/CH3_01-Resolution.ipynb)\n",
+    "\n",
+    "[![OpenInColab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main//Imaging/CH3_01-Resolution.ipynb)\n",
     "\n",
     "part of \n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2023\n",
     "\n",
-    "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
-    "Materials Science & Engineering<br>\n",
-    "The University of Tennessee, Knoxville\n",
+    "**Spring 2024**\n",
+    "<table style=\"margin-right:auto;margin-left:0px\">\n",
+    "  <tr>\n",
+    "    <td>Gerd Duscher </td>\n",
+    "    <td>Khalid Hattar</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Microscopy Facilities</td> \n",
+    "    <td> Tennessee Ion Beam Materials Laboratory </td>\n",
+    "  </tr>\n",
+    "  \n",
+    "  <tr>\n",
+    "    <td>Materials Science & Engineering</td>\n",
+    "    <td> Nuclear Engineering</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Institute of Advanced Materials & Manufacturing</td>\n",
+    "    <td> </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td colspan=\"2\"><center> The University of Tennessee, Knoxville</center> </td>\n",
+    "  </tr>\n",
+    "</table>\n",
     "\n",
-    "Background and methods to analysis and quantification of data acquired with transmission electron microscopes."
+    "Background and methods to analysis and quantification of data acquired with transmission electron microscopes.\n",
+    "\n"
    ]
   },
   {
@@ -54,19 +76,19 @@
    ],
    "source": [
     "import sys\n",
-    "from pkg_resources import get_distribution, DistributionNotFound\n",
-    "\n",
+    "import importlib.metadata\n",
     "def test_package(package_name):\n",
     "    \"\"\"Test if package exists and returns version or -1\"\"\"\n",
     "    try:\n",
-    "        version = get_distribution(package_name).version\n",
-    "    except (DistributionNotFound, ImportError):\n",
+    "        version = importlib.metadata.version(package_name)\n",
+    "    except importlib.metadata.PackageNotFoundError:\n",
     "        version = '-1'\n",
     "    return version\n",
     "\n",
-    "if test_package('pyTEMlib') < '0.2023.2.0':\n",
+    "if test_package('pyTEMlib') < '0.2024.2.3':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
+    "\n",
     "print('done')"
    ]
   },
@@ -90,15 +112,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
+      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
       "Symmetry functions of spglib enabled\n",
       "Using kinematic_scattering library version {_version_ }  by G.Duscher\n"
      ]
     }
    ],
    "source": [
-    "%matplotlib  notebook\n",
+    "%matplotlib  widget\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import sys\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    from google.colab import output\n",
+    "    output.enable_custom_widget_manager()\n",
     "\n",
     "import scipy.special\n",
     "import pyTEMlib.kinematic_scattering as ks"
@@ -3302,7 +3330,7 @@
    "metadata": {},
    "source": [
     "## Navigation\n",
-    "- <font size = \"3\">  **Back Chapter 2: [Diffraction](CH3_00-Imaging.ipynb)** </font>\n",
+    "- <font size = \"3\">  **Back Chapter 3: [Imaging](CH3_00-Imaging.ipynb)** </font>\n",
     "- <font size = \"3\">  **Next: [Introduction to Phase Contrast](CH3_03-CTF.ipynb)** </font>\n",
     "- <font size = \"3\">  **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)** </font>\n"
    ]
@@ -3331,7 +3359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.8"
   },
   "toc": {
    "base_numbering": 1,
@@ -3348,5 +3376,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
