--- a/Imaging/CH3_00-Imaging.ipynb
+++ b/Imaging/CH3_00-Imaging.ipynb
@@ -12,17 +12,33 @@
     "\n",
     "# Chapter 3: Imaging\n",
     "\n",
-    "part of \n",
+    "part of\n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "\n",
-    "by Gerd Duscher, Spring 2023\n",
-    "\n",
-    "Microscopy Facilities<br>\n",
-    "Institute of Advanced Materials & Manufacturing<br>\n",
-    "Materials Science & Engineering<br>\n",
-    "The University of Tennessee, Knoxville\n",
+    "**Spring 2024**\n",
+    "<table style=\"margin-right:auto;margin-left:0px\">\n",
+    "  <tr>\n",
+    "    <td>Gerd Duscher </td>\n",
+    "    <td>Khalid Hattar</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Microscopy Facilities</td> \n",
+    "    <td> Tennessee Ion Beam Materials Laboratory </td>\n",
+    "  </tr>\n",
+    "  \n",
+    "  <tr>\n",
+    "    <td>Materials Science & Engineering</td>\n",
+    "    <td> Nuclear Engineering</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Institute of Advanced Materials & Manufacturing</td>\n",
+    "    <td> </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td colspan=\"2\"><center> The University of Tennessee, Knoxville</center> </td>\n",
+    "  </tr>\n",
+    "</table>\n",
     "\n",
     "Background and methods to analysis and quantification of data acquired with transmission electron microscopes."
    ]
@@ -79,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.8"
   },
   "toc": {
    "base_numbering": 1,
