--- a/Imaging/CH3_04-Linear_Image_Approximation.ipynb
+++ b/Imaging/CH3_04-Linear_Image_Approximation.ipynb
@@ -572,6 +572,8 @@
     "Within this weak phase object aberration, we can already investigate the influence of lens aberrations on the image.\n",
     "\n",
     "We do now all steps together and check the effect of the aberration, acceleration voltage, aperture, and element onto the final image (in weak phase approximation).\n",
+    "\n",
+    "Try an astigmatism ($C_{12}$) value of 30 nm to see an effect. How small of a value is invisible? How does astigmatism ($C_{12}$) depend on defocus ($C_{10}$)?\n",
     "\n"
    ]
   },
@@ -618,14 +620,14 @@
    ],
    "source": [
     "# -----Input -----\n",
-    "ab={'C10':-110.0, 'C12a': 00.0, 'C12b': 00.0, 'C30': 0.5*1e7} # aberrations in nm\n",
+    "ab={'C10':-110.0, 'C12a': 0.0, 'C12b': 0.0, 'C30': 0.5} # aberrations in nm\n",
     "# -------------\n",
     "\n",
     "nx = ny = 1024\n",
     "n_cell_x = 16\n",
     "a = 2.4\n",
     "acceleration_voltage = 200000\n",
-    "resolution = 1.5\n",
+    "resolution = 1.\n",
     "\n",
     "\n",
     "potential = ds.potential_2dim('Au', nx, nx, n_cell_x, n_cell_x, a, [[0,0], [0.5,0.5]])\n",
