--- a/Imaging/CH3_05-Defocus_Thickness.ipynb
+++ b/Imaging/CH3_05-Defocus_Thickness.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false,
@@ -123,6 +123,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
+      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
+      "Symmetry functions of spglib enabled\n",
+      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
       "pyTEM version:  0.2024.02.2\n"
      ]
     }
@@ -166,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -187,14 +191,14 @@
        "Text(0.5, 0, 'distance ($\\\\AA$)')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71e5e6136fca440b8d726bf17a08ffcb",
+       "model_id": "1ce1764c58bd45e28015c786d2b0b2f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -274,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -283,14 +287,14 @@
        "Text(0.5, 0, 'distance (nm)')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07d65cf3042c4e67934bcafa8326d0f5",
+       "model_id": "4b75cd566b274606b222ab08c10f2787",
        "version_major": 2,
        "version_minor": 0
       },
@@ -346,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -363,17 +367,17 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2daa8dc0c10>"
+       "<matplotlib.image.AxesImage at 0x1795d1d3190>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a2fab75982c40629f50370e8d829d64",
+       "model_id": "782702bb2ac44319884672c27bcef57f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -447,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +464,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "332160e353364b8780d0fd77348145c5",
+       "model_id": "4563b436d8ef48f3a6358a7569469a96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -527,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -536,14 +540,14 @@
        "Text(0.5, 0, 'reciprocal distance (1/nm)')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2368566619e049a6afe38a8a8677bec8",
+       "model_id": "76f251cb7e2b46d48c7f6d022d42a0e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -675,23 +679,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2daad188f10>"
+       "<matplotlib.image.AxesImage at 0x1795eec5ad0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28a7edebf29d4fdab79668da80c94efd",
+       "model_id": "37f5e56594b34ce8baefc8d9d2a164d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -741,13 +745,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a33d345a0c07471490a3ef792742cfca",
+       "model_id": "57a9565515294b7eb2c7c49205523ed4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -802,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -827,14 +831,14 @@
        "Text(0.5, 0, 'distance (nm)')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed200c54486241c4b28bb17b458b9687",
+       "model_id": "8b10d526c14d4612980962f0994db704",
        "version_major": 2,
        "version_minor": 0
       },
@@ -946,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +966,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "348b3fa36e4c46ca83a3c9a251662b14",
+       "model_id": "f92ba00bce2c4d7c8841d170ddfc30c1",
        "version_major": 2,
        "version_minor": 0
       },
