image analysis bugs fixed for colab

--- a/Imaging/CH3_06-Image_Processing.ipynb
+++ b/Imaging/CH3_06-Image_Processing.ipynb
@@ -98,17 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
-      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
-      "Symmetry functions of spglib enabled\n",
-      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
       "pyTEM version:  0.2024.02.2\n"
      ]
     }
@@ -132,7 +128,7 @@
     "# Import libraries from pycrosccopy\n",
     "\n",
     "import pyTEMlib\n",
-    "import pyTEMlib.file_tools as ft          # File input/ output library\n",
+    "import pyTEMlib.file_tools          # File input/ output library\n",
     "import pyTEMlib.kinematic_scattering as ks         # Kinematic sCattering Library\n",
     "\n",
     "# it is a good idea to show the version numbers at this point for archiving reasons.\n",
@@ -151,13 +147,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ---- Input ------\n",
+    "load_example = True\n",
+    "# -----------------\n",
+    "if not load_example:\n",
+    "    fileWidget = file_tools.FileWidget()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "711237e49b7e492aa745da9fecbd6502",
+       "model_id": "9219ada99dee4e4bac569fc6ae904455",
        "version_major": 2,
        "version_minor": 0
       },
@@ -181,8 +190,26 @@
     }
    ],
    "source": [
-    "datasets = ft.open_file('../example_data/p1-3-hr3.dm3')\n",
-    "dataset = datasets['Channel_000']\n",
+    "# ---- Input ------\n",
+    "load_example = True\n",
+    "\n",
+    "file_name = 'p1-3-hr3.dm3'\n",
+    "# -----------------\n",
+    "      \n",
+    "if load_example:\n",
+    "    if 'google.colab' in sys.modules:\n",
+    "      if not os.path.exists('./'+file_name):\n",
+    "        !wget  https://github.com/gduscher/MSE672-Introduction-to-TEM/raw/main/example_data/p1-3-hr3.dm3\n",
+    "        !wget  https://github.com/gduscher/MSE672-Introduction-to-TEM/raw/main/example_data/p1-hr4-ZnOonGraphite.dm3\n",
+    "    else:\n",
+    "        datasets = pyTEMlib.file_tools.open_file('../example_data/'+file_name)\n",
+    "        dataset = datasets['Channel_000']\n",
+    "      \n",
+    "else:\n",
+    "    datasets = fileWidget.datasets\n",
+    "    dataset = fileWidget.selected_dataset\n",
+    "# Load file\n",
+    "\n",
     "view = dataset.plot()"
    ]
   },
@@ -195,13 +222,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c112d5849c24cd9b00507e00d703719",
+       "model_id": "2c643a1b5d4b40768b832c3afecf1303",
        "version_major": 2,
        "version_minor": 0
       },
@@ -255,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +296,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83417791dabe4955aa9154a90541f5fc",
+       "model_id": "ed6d8edce098465dad14ece242bdee78",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +357,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd1541b0f7cf4c5d9e64537e640fd634",
+       "model_id": "8f7b05a4149444cfbc160cb794fece34",
        "version_major": 2,
        "version_minor": 0
       },
@@ -398,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +438,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bc12345c1234bc799445d66a558f6d6",
+       "model_id": "7ce0bae95e174710b5734673bd717976",
        "version_major": 2,
        "version_minor": 0
       },
@@ -479,13 +506,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3c7ca2f190642adb0560219138cc12f",
+       "model_id": "0515992ccfdd4d35b39cd94dc51a771b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -558,13 +585,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca7928175b5946d8b1353de78ed6ecd4",
+       "model_id": "65e1f4b5c6b847ff9a166777db7c4e54",
        "version_major": 2,
        "version_minor": 0
       },
