google drive in image analysis

--- a/Imaging/CH3_06-Image_Processing.ipynb
+++ b/Imaging/CH3_06-Image_Processing.ipynb
@@ -155,6 +155,8 @@
     "load_example = True\n",
     "# -----------------\n",
     "if not load_example:\n",
+    "    if 'google.colab' in sys.modules:\n",
+    "        drive.mount(\"/content/drive\")\n",
     "    fileWidget = file_tools.FileWidget()"
    ]
   },
