--- a/Imaging/CH3_06-Image_Processing.ipynb
+++ b/Imaging/CH3_06-Image_Processing.ipynb
@@ -113,6 +113,7 @@
     "%matplotlib  widget\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import os\n",
     "import sys\n",
     "if 'google.colab' in sys.modules:\n",
     "    from google.colab import output\n",
