--- a/Imaging/CH3_09-Z_Contrast.ipynb
+++ b/Imaging/CH3_09-Z_Contrast.ipynb
@@ -29,14 +29,33 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2023\n",
     "\n",
-    "Microscopy Facilities<br>\n",
-    "Institute of Advanced Materials & Manufacturing<br>\n",
-    "Materials Science & Engineering<br>\n",
-    "The University of Tennessee, Knoxville\n",
+    "**Spring 2024**\n",
+    "<table style=\"margin-right:auto;margin-left:0px\">\n",
+    "  <tr>\n",
+    "    <td>Gerd Duscher </td>\n",
+    "    <td>Khalid Hattar</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Microscopy Facilities</td> \n",
+    "    <td> Tennessee Ion Beam Materials Laboratory </td>\n",
+    "  </tr>\n",
+    "  \n",
+    "  <tr>\n",
+    "    <td>Materials Science & Engineering</td>\n",
+    "    <td> Nuclear Engineering</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Institute of Advanced Materials & Manufacturing</td>\n",
+    "    <td> </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td colspan=\"2\"><center> The University of Tennessee, Knoxville</center> </td>\n",
+    "  </tr>\n",
+    "</table>\n",
     "\n",
     "Background and methods to analysis and quantification of data acquired with transmission electron microscopes.\n",
+    "\n",
     "\n",
     "Note: This notebook needs a Linux environment and is most easily run in Colab"
    ]
@@ -88,7 +107,24 @@
     "    !pip install abtem -q\n",
     "# pyTEMlib setup ------------------\n",
     "else:\n",
-    "    if test_package('pyTEMlib') < '0.2023.3.0':\n",
+    "    if test_package('pyTEMlib') < '0.2import sys\n",
+    "import importlib.metadata\n",
+    "def test_package(package_name):\n",
+    "    \"\"\"Test if package exists and returns version or -1\"\"\"\n",
+    "    try:\n",
+    "        version = importlib.metadata.version(package_name)\n",
+    "    except importlib.metadata.PackageNotFoundError:\n",
+    "        version = '-1'\n",
+    "    return version\n",
+    "\n",
+    "if test_package('pyTEMlib') < '0.2024.2.3':\n",
+    "    print('installing pyTEMlib')\n",
+    "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
+    "if test_package('abtem') < '1.0.0b17':\n",
+    "    print('installing abtem')\n",
+    "    !{sys.executable} -m pip install  --upgrade abtem -q\n",
+    "\n",
+    "print('done')023.3.0':\n",
     "        print('installing pyTEMlib')\n",
     "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "    if test_package('abtem') < '1.0.0b17':\n",
