update spectroscopy for colab

--- a/Homework/Homework04-Image_Analysis.ipynb
+++ b/Homework/Homework04-Image_Analysis.ipynb
@@ -1023,8 +1023,7 @@
     "\n",
     "for i in range(len(crystal_r)):\n",
     "    if visible_crystal[crystal_sorted[i]]:\n",
-    "        plt.text(x[i],y[i], crystal_hkl[i],color='red')\n",
-    "\n",
+    "        plt.text(x[i],y[i], str(crystal_hkl[i]), color='red')\n",
     "\n",
     "plt.xlim(-8,8);plt.ylim(-8,8)\n",
     "plt.legend(loc=1)\n"
@@ -1168,7 +1167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": "7",
