--- a/Imaging/CH3_00-Imaging.ipynb
+++ b/Imaging/CH3_00-Imaging.ipynb
@@ -60,7 +60,8 @@
     " \n",
     "**Z-Contrast**\n",
     "* [Thermal-Diffuse Scattering](CH3_08-Thermal_Diffuse_Scattering.ipynb)\n",
-    "* [Z-Contrast Imaging](CH3_09-Z_Contrast)\n",
+    "* [Z-Contrast Imaging](CH3_09-Z_Contrast.ipynb)\n",
+    "* [Ronchigram](CH3_10-Ronchigram.ipynb)\n",
     "<!---\n",
     "* [Ronchigrams](CH3_10-Ronchigrams.ipynb)\n",
     "* [Find Atoms](CH3_11-Find_Atoms.ipynb)\n",
@@ -95,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
