--- a/Spectroscopy/CH4_00-Spectroscopy.ipynb
+++ b/Spectroscopy/CH4_00-Spectroscopy.ipynb
@@ -50,10 +50,13 @@
     "* [Fitting the Zero-Loss Peak](CH4_02-Fit_Zero_Loss.ipynb)\n",
     "* [Analysing Low-Loss Spectra with Drude Theory](CH4_03-Drude.ipynb)\n",
     "* [Momentum Resolved EELS](CH4_03-Drude.ipynb)\n",
-    "<!---* [Simulation of Momentum Resolved EELS](CH4_04-Kroeger.ipynb)\n",
+    "\n",
+    "<!--\n",
+    "-* [Simulation of Momentum Resolved EELS](CH4_04-Kroeger.ipynb)\n",
     "* [Calculating Dielectric Function I: Aluminum](CH4-05-DielectricDFT.ipynb)\n",
     "* [Calculating Dielectric Function II: Silicon](CH4_06-DielectricDFT2.ipynb)\n",
-    "--->\n",
+    "-\n",
+    "-->\n",
     "\n",
     "**Core-Loss EELS**\n",
     "* [Introduction to Core-Loss Spectroscopy](CH4_07-Introduction_Core_Loss.ipynb)\n",
