--- a/Spectroscopy/CH4_01-Introduction.ipynb
+++ b/Spectroscopy/CH4_01-Introduction.ipynb
@@ -54,19 +54,19 @@
    ],
    "source": [
     "import sys\n",
-    "from pkg_resources import get_distribution, DistributionNotFound\n",
-    "\n",
+    "import importlib.metadata\n",
     "def test_package(package_name):\n",
     "    \"\"\"Test if package exists and returns version or -1\"\"\"\n",
     "    try:\n",
-    "        version = get_distribution(package_name).version\n",
-    "    except (DistributionNotFound, ImportError) as err:\n",
+    "        version = importlib.metadata.version(package_name)\n",
+    "    except importlib.metadata.PackageNotFoundError:\n",
     "        version = '-1'\n",
     "    return version\n",
     "\n",
     "if test_package('pyTEMlib') < '0.2024.2.3':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
+    "\n",
     "print('done')"
    ]
   },
