update core_loss for colab

--- a/Spectroscopy/CH4_02-Fit_Zero_Loss.ipynb
+++ b/Spectroscopy/CH4_02-Fit_Zero_Loss.ipynb
@@ -253,6 +253,7 @@
     }
    ],
    "source": [
+    "# ---- Input ------\n",
     "load_example = True\n",
     "file_name = 'AL-DFoffset0.00.dm3'\n",
     "# -----------------\n",
