--- a/Imaging/CH3_09-Z_Contrast.ipynb
+++ b/Imaging/CH3_09-Z_Contrast.ipynb
@@ -76,38 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "installing pyTEMlib\n",
+      "done\n",
       "done\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "from pkg_resources import get_distribution, DistributionNotFound\n",
-    "\n",
-    "def test_package(package_name):\n",
-    "    \"\"\"Test if package exists and returns version or -1\"\"\"\n",
-    "    try:\n",
-    "        version = get_distribution(package_name).version\n",
-    "    except (DistributionNotFound, ImportError) as err:\n",
-    "        version = '-1'\n",
-    "    return version\n",
-    "\n",
-    "# Colab setup ------------------\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    !pip install pyTEMlib -q\n",
-    "    !pip install ase -q\n",
-    "    !pip install ipympl -q\n",
-    "    !pip install abtem -q\n",
-    "# pyTEMlib setup ------------------\n",
-    "else:\n",
-    "    if test_package('pyTEMlib') < '0.2import sys\n",
     "import importlib.metadata\n",
     "def test_package(package_name):\n",
     "    \"\"\"Test if package exists and returns version or -1\"\"\"\n",
@@ -120,16 +103,10 @@
     "if test_package('pyTEMlib') < '0.2024.2.3':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
-    "if test_package('abtem') < '1.0.0b17':\n",
+    "if test_package('abtem') < '1.0.4':\n",
     "    print('installing abtem')\n",
-    "    !{sys.executable} -m pip install  --upgrade abtem -q\n",
+    "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "\n",
-    "print('done')023.3.0':\n",
-    "        print('installing pyTEMlib')\n",
-    "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
-    "    if test_package('abtem') < '1.0.0b17':\n",
-    "        print('installing abtem')\n",
-    "        !{sys.executable} -m pip install  --upgrade abtem -q\n",
     "# ------------------------------\n",
     "print('done')"
    ]
