--- a/Introduction/CH1_04-Open_File.ipynb
+++ b/Introduction/CH1_04-Open_File.ipynb
@@ -605,7 +605,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2912,9 +2914,9 @@
  "metadata": {
   "hide_code_all_hidden": false,
   "kernelspec": {
-   "display_name": "pyTEMlib",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytemlib"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
