--- a/Introduction/CH1_07-Electron_Optics.ipynb
+++ b/Introduction/CH1_07-Electron_Optics.ipynb
@@ -626,9 +626,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "pyTEMlib",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytemlib"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
