--- a/Diffraction/CH2_08-Spot_Diffraction_Pattern.ipynb
+++ b/Diffraction/CH2_08-Spot_Diffraction_Pattern.ipynb
@@ -916,9 +916,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyTEMlib",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytemlib"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -930,7 +930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.8"
   },
   "livereveal": {
    "height": 768,
