--- a/Introduction/CH1_00-Introduction.ipynb
+++ b/Introduction/CH1_00-Introduction.ipynb
@@ -20,29 +20,12 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "**Spring 2024**\n",
-    "<table style=\"margin-right:auto;margin-left:0px\">\n",
-    "  <tr>\n",
-    "    <td>Gerd Duscher </td>\n",
-    "    <td>Khalid Hattar</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>Microscopy Facilities</td> \n",
-    "    <td> Tennessee Ion Beam Materials Laboratory </td>\n",
-    "  </tr>\n",
-    "  \n",
-    "  <tr>\n",
-    "    <td>Materials Science & Engineering</td>\n",
-    "    <td> Nuclear Engineering</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>Institute of Advanced Materials & Manufacturing</td>\n",
-    "    <td> </td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td colspan=\"2\"><center> The University of Tennessee, Knoxville</center> </td>\n",
-    "  </tr>\n",
-    "</table>\n",
+    "**Spring 2025**\n",
+    "\n",
+    "Gerd Duscher <br>\n",
+    "Microscopy Facilities<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
+    "The University of Tennessee, Knoxville\n",
     "\n",
     "Background and methods to analysis and quantification of data acquired with transmission electron microscopes."
    ]
