--- a/Introduction/CH1_04-Open_File.ipynb
+++ b/Introduction/CH1_04-Open_File.ipynb
@@ -24,17 +24,14 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "**Spring 2024**\n",
-    "<table style=\"margin-right:auto;margin-left:0px\">\n",
-    "  <tr>\n",
-    "    <td>Gerd Duscher </td>\n",
-    "    <td>Khalid Hattar</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>Microscopy Facilities</td> \n",
-    "    <td> Tennessee Ion Beam Materials Laboratory </td>\n",
-    "  </tr>\n",
-    "  \n",
+    "**Spring 2025**<br>\n",
+    "by Gerd Duscher\n",
+    "\n",
+    "Microscopy Facilities<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
+    "Materials Science & Engineering<br>\n",
+    "The University of Tennessee, Knoxville\n",
+    "\n",
     "  <tr>\n",
     "    <td>Materials Science & Engineering</td>\n",
     "    <td> Nuclear Engineering</td>\n",
