--- a/Introduction/CH1_05-Course_Organization.ipynb
+++ b/Introduction/CH1_05-Course_Organization.ipynb
@@ -23,29 +23,13 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "**Spring 2024**\n",
-    "<table style=\"margin-right:auto;margin-left:0px\">\n",
-    "  <tr>\n",
-    "    <td>Gerd Duscher </td>\n",
-    "    <td>Khalid Hattar</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>Microscopy Facilities</td> \n",
-    "    <td> Tennessee Ion Beam Materials Laboratory </td>\n",
-    "  </tr>\n",
-    "  \n",
-    "  <tr>\n",
-    "    <td>Materials Science & Engineering</td>\n",
-    "    <td> Nuclear Engineering</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>Institute of Advanced Materials & Manufacturing</td>\n",
-    "    <td> </td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td colspan=\"2\"><center> The University of Tennessee, Knoxville</center> </td>\n",
-    "  </tr>\n",
-    "</table>\n"
+    "**Spring 2025**<br>\n",
+    "by Gerd Duscher\n",
+    "\n",
+    "Microscopy Facilities<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
+    "Materials Science & Engineering<br>\n",
+    "The University of Tennessee, Knoxville\n"
    ]
   },
   {
@@ -121,25 +105,26 @@
     }
    },
    "source": [
-    "## Syllabus\n",
+    "## Syllabus 2025\n",
     "\n",
     "| Week | Lecture | Chp. | Lab |\n",
     "|------|---------|------|-----|\n",
-    "|01/22 - 01/28 | 1,2:Introduction, Geometric Ray Optics | 1 | |\n",
-    "|01/29 - 02/04 | 3,4: Kinematic Diffraction |  2,11 | Lab1: Basic Imaging|\n",
-    "|02/05 - 02/11 | 5,6:Kinematic Diffraction -parallel | 12  | Lab2: Basic Diffraction|\n",
-    "|02/12 - 02/18 | 7,8:Kinematic Diffraction -convergent   | 19,20 | Lab3: SAED |\n",
-    "|02/19 - 02/25 | 9,10:Dynamic Diffraction | 14,15 | Lab4: CBED |\n",
-    "|02/26 - 03/03 | 11,12:Imaging Overview | 22 | Lab5: Two Beams|\n",
-    "|03/04 - 03/10 | 13,14:Imaging Conventional | 24-27 | Lab7: Phase Contrast|\n",
-    "|03/18 - 03/24 | 15,16:Imaging Phase Contrast | 28,30 | Lab6: Exam Preparation|\n",
-    "|03/25 - 03/31 | 17,18:Imaging and Lens Aberrations | 31 | Exam |\n",
-    "|04/01 - 04/07 | 19 :Imaging Z-contrast| -  | Lab8: CTF|\n",
-    "|04/08 - 04/14 | 20,21:Spectroscopy EELS | 36-40 | Lab9: Z-contrast|\n",
-    "|04/15 - 04/21 | 22,23:Spectroscopy EDS | 33-35 | Lab10: EELS, ESI|\n",
-    "|04/22 - 04/28 | 24:Other Techniques | 29 ||\n",
-    "|04/29 - 05/05 | 25,26: TEM parts and vacuum | 5-9 ||\n",
-    "|05/06 -  | 28:Project discussion ||"
+    "|01/19 - 01/25 | 1,2:Introduction, Geometric Ray Optics | 1 | |\n",
+    "|01/26 - 02/01 | 3,4: Kinematic Diffraction |  2,11 | Lab1: Basic Imaging|\n",
+    "|02/02 - 02/08 | 5,6:Kinematic Diffraction -parallel | 12  | Lab2: Basic Diffraction|\n",
+    "|02/09 - 02/15 | 7,8:Kinematic Diffraction -convergent   | 19,20 | Lab3: SAED |\n",
+    "|02/16 - 02/22 | 9,10:Dynamic Diffraction | 14,15 | Lab4: CBED |\n",
+    "|02/23 - 03/01 | 11,12:Imaging Overview | 22 | Lab5: Two Beams|\n",
+    "|03/02 - 03/08 | 13,14:Imaging Conventional | 24-27 | Lab7: Phase Contrast|\n",
+    "|03/09 - 03/15 | 15,16:Imaging Phase Contrast | 28,30 | Lab6: Exam Preparation|\n",
+    "|03/16 - 03/22 | Spring Break|  | Spring Break|\n",
+    "|03/23 - 03/29 | 17,18:Imaging and Lens Aberrations | 31 | Exam |\n",
+    "|03/30 - 04/05 | 19 :Imaging Z-contrast| -  | Lab8: CTF|\n",
+    "|04/06 - 04/12 | 20,21:Spectroscopy EELS | 36-40 | Lab9: Z-contrast|\n",
+    "|04/13 - 04/19 | 22,23:Spectroscopy EDS | 33-35 | Lab10: EELS, ESI|\n",
+    "|04/20 - 04/26 | 24:Other Techniques | 29 ||\n",
+    "|04/27 - 05/02 | 25,26: TEM parts and vacuum | 5-9 ||\n",
+    "|05/04 -  | 28:Project discussion ||"
    ]
   },
   {
