--- a/Introduction/CH1_06-Overview.ipynb
+++ b/Introduction/CH1_06-Overview.ipynb
@@ -22,29 +22,13 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "**Spring 2024**\n",
-    "<table style=\"margin-right:auto;margin-left:0px\">\n",
-    "  <tr>\n",
-    "    <td>Gerd Duscher </td>\n",
-    "    <td>Khalid Hattar</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>Microscopy Facilities</td> \n",
-    "    <td> Tennessee Ion Beam Materials Laboratory </td>\n",
-    "  </tr>\n",
-    "  \n",
-    "  <tr>\n",
-    "    <td>Materials Science & Engineering</td>\n",
-    "    <td> Nuclear Engineering</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>Institute of Advanced Materials & Manufacturing</td>\n",
-    "    <td> </td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td colspan=\"2\"><center> The University of Tennessee, Knoxville</center> </td>\n",
-    "  </tr>\n",
-    "</table>\n",
+    "**Spring 2025**<br>\n",
+    "by Gerd Duscher\n",
+    "\n",
+    "Microscopy Facilities<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
+    "Materials Science & Engineering<br>\n",
+    "The University of Tennessee, Knoxville\n",
     "\n",
     "\n",
     "\n",
@@ -77,7 +61,7 @@
     "        version = '-1'\n",
     "    return version\n",
     "\n",
-    "if test_package('pyTEMlib') < '0.2023.1.0':\n",
+    "if test_package('pyTEMlib') < '0.2025.1.0':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "print('done')"
